# maze

./: .gitignore  pyproject.toml  requirements.txt
src/: manage.py
src/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/bookmaze/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
src/bookmaze/settings/: base.py
src/bookmaze/static/bookmaze/css/: bookmaze.css
src/bookmaze/templates/bookmaze/: base.html  form_view.html  index.html  login.html  logout.html  user_list.html
src/maze/: admin.py  forms.py  models.py  urls.py  views.py
src/maze/management/commands/: import_tasks.py
src/maze/migrations/: 0001_initial.py  0002_auto_20210901_1443.py  0003_step.py  0004_auto_20210902_1209.py  0005_auto_20210906_2038.py  0006_maze_title.py  0007_auto_20210910_1331.py  0008_maze_users.py  0009_auto_20220305_1201.py  0010_maze_last_updated.py  0011_set_last_updated.py  0012_task_archived.py  0013_category_maze_category_task_category.py  0014_alter_category_name.py  0015_alter_task_category.py
src/maze/static/maze/css/: maze.css
src/maze/static/maze/js/: maze.js
src/maze/templates/maze/: index.html  maze.html  maze_list.html
src/notebooks/: Untitled.ipynb  Untitled1.ipynb
