[tool.poetry]
name = "maze"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
Django = "^3.2.6"
django-extensions = "^3.1.3"
ipython = "^7.26.0"
notebook = "^6.4.3"
mazelib = "^0.9.12"
django-crispy-forms = "^1.12.0"
crispy-bootstrap5 = "^0.5"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
